# codex-ble-buddy

./: .gitignore  README.md  first-time-setup.bat  pyproject.toml  首次配置.bat
examples/: config.toml  hooks.json
firmware/: README.md
scripts/: codex_permission_hook.py
src/codex_ble_buddy/: __init__.py  ble.py  claude_config.py  cli.py  codex_config.py  config.py  hook.py  logging_utils.py  protocol.py  service.py
tests/: test_claude_config.py  test_codex_config.py  test_protocol.py  test_service.py
